# elliott-farrall-dotfiles

./: .actrc  .editorconfig  .envrc  .gitignore  LICENSE.md  README.md  build.sh  flake.nix  format.nix  formatters.nix  garnix.yaml  renovate.json  secrets.nix
.github/: format.nix  renovate.json
.github/actions/setup/: action.yaml
.github/workflows/: check.yaml  deploy.yaml  diff.yaml  format.yaml  inputs.yaml  prebuild.yaml  retry.yaml  update.yaml
checks/deploy-activate/: default.nix
checks/deploy-schema/: default.nix
checks/pre-commit/: default.nix  treefmt.nix
formatter/: default.nix
homes/x86_64-linux/elliott@lima/: default.nix
lib/: default.nix
modules/common/: theme.nix
modules/home/applications/: default.nix
modules/home/desktop/: default.nix
modules/home/direnv/: default.nix
modules/home/display/: default.nix
modules/home/git/: auth.age  default.nix  sign.age
modules/home/home-manager/: default.nix
modules/home/locker/: default.nix
modules/home/rclone/: default.nix
overlays/android-tools/: default.nix
overlays/flox/: default.nix
overlays/kmscon/: default.nix
overlays/mathematica/: default.nix
overlays/rmview/: default.nix
overlays/vivaldi/: default.nix
overlays/wpa_supplicant/: default.nix
shells/default/: default.nix
shells/deploy/: default.nix
shells/diff/: default.nix
templates/overlay/: default.nix
templates/python/: .gitignore  flake.nix  pyproject.toml  treefmt.nix
templates/python/shells/python/: default.nix
templates/ruby/: .editorconfig  .gitignore  flake.nix  treefmt.nix
(+424 files in other folders)
